// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationTab /> snapshot should match snapshot 1`] = `
<NavigationTab
  aria-label="chat"
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ButtonSimple
        aria-label="chat"
        className="md-navigation-tab-wrapper"
        data-active={false}
        data-size={48}
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              aria-label="chat"
              className="md-navigation-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-size={48}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </FocusRing>
  </FocusRing>
</NavigationTab>
`;

exports[`<NavigationTab /> snapshot should match snapshot with active 1`] = `
<NavigationTab
  active={true}
  aria-label="chat"
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ButtonSimple
        aria-label="chat"
        className="md-navigation-tab-wrapper"
        data-active={true}
        data-size={48}
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              aria-label="chat"
              className="md-navigation-tab-wrapper md-button-simple-wrapper"
              data-active={true}
              data-size={48}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </FocusRing>
  </FocusRing>
</NavigationTab>
`;

exports[`<NavigationTab /> snapshot should match snapshot with className 1`] = `
<NavigationTab
  aria-label="chat"
  className="example-class"
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ButtonSimple
        aria-label="chat"
        className="md-navigation-tab-wrapper example-class"
        data-active={false}
        data-size={48}
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              aria-label="chat"
              className="md-navigation-tab-wrapper example-class md-button-simple-wrapper"
              data-active={false}
              data-size={48}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </FocusRing>
  </FocusRing>
</NavigationTab>
`;

exports[`<NavigationTab /> snapshot should match snapshot with count 1`] = `
<NavigationTab
  aria-label="chat"
  count={100}
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ButtonSimple
        aria-label="chat"
        className="md-navigation-tab-wrapper"
        data-active={false}
        data-size={48}
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              aria-label="chat"
              className="md-navigation-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-size={48}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <Badge
                className="md-navigation-tab-count"
                size={18}
              >
                <div
                  className="md-badge-wrapper md-navigation-tab-count"
                  data-size={18}
                >
                  +99
                </div>
              </Badge>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </FocusRing>
  </FocusRing>
</NavigationTab>
`;

exports[`<NavigationTab /> snapshot should match snapshot with icon 1`] = `
<NavigationTab
  aria-label="chat"
  icon="contacts"
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ButtonSimple
        aria-label="chat"
        className="md-navigation-tab-wrapper"
        data-active={false}
        data-size={48}
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              aria-label="chat"
              className="md-navigation-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-size={48}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <Icon
                className="md-navigation-tab-icon"
                name="contacts"
                scale={24}
                weight="filled"
              >
                <Icon
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink md-navigation-tab-icon"
                  data-autoscale={false}
                  data-scale={24}
                  data-test="contacts"
                  name="contacts-filled"
                  style={Object {}}
                >
                  <mdc-icon
                    class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink md-navigation-tab-icon"
                    data-autoscale={false}
                    data-scale={24}
                    data-test="contacts"
                    style={Object {}}
                    suppressHydrationWarning={true}
                  />
                </Icon>
              </Icon>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </FocusRing>
  </FocusRing>
</NavigationTab>
`;

exports[`<NavigationTab /> snapshot should match snapshot with id 1`] = `
<NavigationTab
  aria-label="chat"
  id="example-id"
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ButtonSimple
        aria-label="chat"
        className="md-navigation-tab-wrapper"
        data-active={false}
        data-size={48}
        id="example-id"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              aria-label="chat"
              className="md-navigation-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-size={48}
              id="example-id"
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </FocusRing>
  </FocusRing>
</NavigationTab>
`;

exports[`<NavigationTab /> snapshot should match snapshot with label 1`] = `
<NavigationTab
  label="Example label"
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ButtonSimple
        aria-label="Example label"
        className="md-navigation-tab-wrapper"
        data-active={false}
        data-size={48}
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              aria-label="Example label"
              className="md-navigation-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-size={48}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </FocusRing>
  </FocusRing>
</NavigationTab>
`;

exports[`<NavigationTab /> snapshot should match snapshot with size 1`] = `
<div>
  <NavigationTab
    aria-label="chat"
    key="0"
    size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <ButtonSimple
          aria-label="chat"
          className="md-navigation-tab-wrapper"
          data-active={false}
          data-size={40}
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                aria-label="chat"
                className="md-navigation-tab-wrapper md-button-simple-wrapper"
                data-active={false}
                data-size={40}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                type="button"
              />
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </FocusRing>
    </FocusRing>
  </NavigationTab>
  <NavigationTab
    aria-label="chat"
    key="1"
    size={48}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <ButtonSimple
          aria-label="chat"
          className="md-navigation-tab-wrapper"
          data-active={false}
          data-size={48}
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                aria-label="chat"
                className="md-navigation-tab-wrapper md-button-simple-wrapper"
                data-active={false}
                data-size={48}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                type="button"
              />
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </FocusRing>
    </FocusRing>
  </NavigationTab>
  <NavigationTab
    aria-label="chat"
    key="2"
    size={200}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <ButtonSimple
          aria-label="chat"
          className="md-navigation-tab-wrapper"
          data-active={false}
          data-size={200}
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <FocusRing>
            <FocusRing
              focusClass="md-focus-ring-wrapper children"
              focusRingClass="md-focus-ring-wrapper children"
            >
              <button
                aria-label="chat"
                className="md-navigation-tab-wrapper md-button-simple-wrapper"
                data-active={false}
                data-size={200}
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                type="button"
              />
            </FocusRing>
          </FocusRing>
        </ButtonSimple>
      </FocusRing>
    </FocusRing>
  </NavigationTab>
</div>
`;

exports[`<NavigationTab /> snapshot should match snapshot with size, label, icon 1`] = `
<NavigationTab
  aria-label="chat"
  icon="contacts"
  label="Contacts"
  size={48}
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ButtonSimple
        aria-label="chat"
        className="md-navigation-tab-wrapper"
        data-active={false}
        data-size={48}
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              aria-label="chat"
              className="md-navigation-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-size={48}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <Icon
                className="md-navigation-tab-icon"
                name="contacts"
                scale={24}
                weight="filled"
              >
                <Icon
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink md-navigation-tab-icon"
                  data-autoscale={false}
                  data-scale={24}
                  data-test="contacts"
                  name="contacts-filled"
                  style={Object {}}
                >
                  <mdc-icon
                    class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink md-navigation-tab-icon"
                    data-autoscale={false}
                    data-scale={24}
                    data-test="contacts"
                    style={Object {}}
                    suppressHydrationWarning={true}
                  />
                </Icon>
              </Icon>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </FocusRing>
  </FocusRing>
</NavigationTab>
`;

exports[`<NavigationTab /> snapshot should match snapshot with size, label, icon, count, active 1`] = `
<NavigationTab
  active={false}
  aria-label="chat"
  count={0}
  icon="contacts"
  label="Contacts"
  size={48}
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ButtonSimple
        aria-label="chat"
        className="md-navigation-tab-wrapper"
        data-active={false}
        data-size={48}
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              aria-label="chat"
              className="md-navigation-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-size={48}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <Icon
                className="md-navigation-tab-icon"
                name="contacts"
                scale={24}
                weight="filled"
              >
                <Icon
                  className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink md-navigation-tab-icon"
                  data-autoscale={false}
                  data-scale={24}
                  data-test="contacts"
                  name="contacts-filled"
                  style={Object {}}
                >
                  <mdc-icon
                    class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink md-navigation-tab-icon"
                    data-autoscale={false}
                    data-scale={24}
                    data-test="contacts"
                    style={Object {}}
                    suppressHydrationWarning={true}
                  />
                </Icon>
              </Icon>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </FocusRing>
  </FocusRing>
</NavigationTab>
`;

exports[`<NavigationTab /> snapshot should match snapshot with style 1`] = `
<NavigationTab
  aria-label="chat"
  style={
    Object {
      "color": "pink",
    }
  }
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <ButtonSimple
        aria-label="chat"
        className="md-navigation-tab-wrapper"
        data-active={false}
        data-size={48}
        onBlur={[Function]}
        onFocus={[Function]}
        style={
          Object {
            "color": "pink",
          }
        }
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              aria-label="chat"
              className="md-navigation-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-size={48}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "color": "pink",
                }
              }
              type="button"
            />
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </FocusRing>
  </FocusRing>
</NavigationTab>
`;
